# A3_Learning_Agent

./: .gitignore
A3_Learning_Agent/: .gitignore  README.md  _patch_chapter_group_inference.py  _prefer_my_bank_patch.py
A3_Learning_Agent/backend/: .env.example  app.py  config.py
A3_Learning_Agent/docs/: PPT大纲.md  学生画像核心状态评分标准.md  开源依赖与协议说明.md  数据库与AI模型配置说明.md  测试说明书.md  演示视频脚本.md  系统开发说明书.md  部署说明.md
A3_Learning_Agent/frontend/: index.html  package-lock.json  package.json  vite.config.js
A3_Learning_Agent/rag_data/: batch_summary.json  exercise_batch_summary.json  quality_report.json
A3_Learning_Agent/scripts/: build_clean_manual_question_bank.py  enrich_manual_question_bank_with_ai.py  insert_chapter1_choice_questions.py  insert_choice_questions_chapter2_10.py
DeepTutor/: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.runner  MANIFEST.in  README.md  SKILL.md  docker-compose.dev.yml  docker-compose.ghcr.yml  docker-compose.yml  pyproject.toml  requirements.txt
DeepTutor/.github/: pull_request_template.md
DeepTutor/deeptutor/: __version__.py
DeepTutor/deeptutor_cli/: README.md  _tool_result.py  chat.py  common.py  config_cmd.py  init_cmd.py  init_wizard.py  kb.py  main.py  memory.py  partner.py  plugin.py  provider_cmd.py  skill.py  skill_login.py  skill_prompts.py
DeepTutor/deeptutor_web/: __init__.py
DeepTutor/packaging/deeptutor-cli/: README.md  pyproject.toml
DeepTutor/requirements/: cli.txt  dev.txt  math-animator.txt  matrix.txt  partners.txt  server.txt
deeptutor_run/: docker-compose.yml
(+1368 files in other folders)
