[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeptutor-cli"
dynamic = ["version"]
description = "CLI-only distribution for DeepTutor"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
    "PyYAML>=6.0",
    "jinja2>=3.1.0",
    "openai>=1.30.0",
    "tiktoken>=0.5.0",
    "aiohttp>=3.9.4",
    "httpx>=0.27.0",
    "requests>=2.32.2",
    "ddgs>=9.9.1",
    "nest_asyncio>=1.5.8",
    "tenacity>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.19.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.36",
    "anthropic>=0.30.0",
    "dashscope>=1.14.0",
    "perplexityai>=0.1.0",
    "oauth-cli-kit>=0.1.1",
    "llama-index>=0.14.12",
    "llama-index-retrievers-bm25>=0.7.1,<0.8.0",
    "PyMuPDF>=1.26.0",
    "numpy>=1.24.0,<3.0.0",
    "arxiv>=2.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
    "pypdf>=4.0.0",
    "defusedxml>=0.7.1",
]

[project.scripts]
deeptutor = "deeptutor_cli.main:main"

[tool.setuptools]
package-dir = {"" = "../.."}
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "deeptutor.__version__.__version__"}

[tool.setuptools.packages.find]
where = ["../.."]
include = ["deeptutor*", "deeptutor_cli*"]
exclude = ["deeptutor_web*"]
